# bank_account

./: .flake8  .gitignore  README.md  pyproject.toml
src/: generators.py  masks.py  processing.py  sort_by_date.py  widget.py
tests/: conftest.py  test_generators.py  test_masks.py  test_processing.py  test_widget.py  tests_generators.py
